@@ -118,6 +118,7 @@ class Settings(object):
             'use_lvm': False,
             'use_timesyncd': True,
             'use_zfs': False,
+            'use_same_proxy_for_all_protocols': False,
             'user_info_done': False,
             'username': '',
             'xz_cache': [],
